--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.springframework</groupId>
-    <artifactId>gs-spring-boot</artifactId>
+    <artifactId>demo-deploy</artifactId>
     <version>0.1.0</version>
 
     <parent>
@@ -35,6 +35,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <docker.image.prefix>aocp</docker.image.prefix>
     </properties>
 
     <build>
@@ -42,6 +43,17 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>dockerfile-maven-plugin</artifactId>
+                <version>1.3.6</version>
+                <configuration>
+                    <repository>${docker.image.prefix}/${project.artifactId}</repository>
+            	    <buildArgs>
+                		<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+                	</buildArgs>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
